--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,32 +1,27 @@
 # FastAPI and server
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-python-multipart==0.0.9
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+python-multipart>=0.0.9
 
 # AI and LLM
-langchain==0.3.0
-langchain-google-genai==2.0.0
-langgraph==0.2.28
-pandasai==2.2.12
-google-generativeai==0.7.2
+langgraph>=0.2.0
+google-generativeai>=0.7.0
+pandasai>=2.0.0
 
 # Data processing
-pandas==2.2.2
-openpyxl==3.1.5
-numpy==1.26.4
+pandas>=2.0.0
+openpyxl>=3.1.0
+numpy>=1.24.0
 
 # Database
-pymongo==4.8.0
-motor==3.5.1
+pymongo>=4.6.0
+motor>=3.3.0
 
 # File storage (ImageKit)
-imagekitio==4.0.1
+imagekitio>=4.0.0
 
 # Utilities
-python-dotenv==1.0.1
-pydantic==2.9.1
-pydantic-settings==2.5.2
-httpx==0.27.2
-
-# Visualization (for backend chart generation if needed)
-matplotlib==3.9.2
+python-dotenv>=1.0.0
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+httpx>=0.26.0
