--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,8 @@ python-multipart>=0.0.9
 # AI and LLM
 langgraph>=0.2.0
 google-generativeai>=0.7.0
-pandasai>=2.0.0
+pandasai==2.0.24
+duckdb==0.9.2  # Pin version with pre-built wheels to avoid compilation
 
 # Data processing
 pandas>=2.0.0
