--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ python-multipart>=0.0.9
 langgraph>=0.2.0
 google-generativeai>=0.7.0
 pandasai==2.0.24
-duckdb==0.9.2  # Pin version with pre-built wheels to avoid compilation
+duckdb==0.8.1  # Older stable version with binary wheels for all platforms
 
 # Data processing
 pandas>=2.0.0
