--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,8 +6,7 @@ python-multipart>=0.0.9
 # AI and LLM
 langgraph>=0.2.0
 google-generativeai>=0.7.0
-pandasai==2.0.24
-duckdb==0.8.1  # Older stable version with binary wheels for all platforms
+pandasai>=2.0.0
 
 # Data processing
 pandas>=2.0.0
