--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,7 @@ pandasai==2.2.14
 # Data processing
 pandas==1.5.3
 openpyxl>=3.1.0
-numpy>=1.24.0
+numpy<1.26.0,>=1.21.0
 
 # Database
 pymongo>=4.6.0
