--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,7 +5,7 @@ python-multipart>=0.0.9
 
 # AI and LLM
 langgraph>=0.2.0
-google-generativeai>=0.7.0
+google-generativeai==0.3.2
 pandasai==2.2.14
 
 # Data processing
