--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ python-multipart>=0.0.9
 # AI and LLM
 langgraph>=0.2.0
 google-generativeai>=0.8.0
-pandasai>=3.0.0
+pandasai==2.2.15
 
 # Data processing
 pandas==1.5.3
