Update .gitignore to include test files for local development

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ Thumbs.db
 
 # Logs
 *.log
+
+# Test files (keep locally, don't deploy)
+backend/test_*.py
+backend/analyze_results.py
+backend/test_results.json
