--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,10 @@ pandas==1.5.3
 openpyxl>=3.1.0
 numpy<1.26.0,>=1.21.0
 
+# Visualization (required by PandasAI for code execution environment)
+matplotlib>=3.7.0
+seaborn>=0.12.0
+
 # Database
 pymongo>=4.6.0
 motor>=3.3.0
