--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ numpy<1.26.0,>=1.21.0
 # Visualization (required by PandasAI for code execution environment)
 matplotlib>=3.7.0
 seaborn>=0.12.0
+tabulate>=0.9.0
 
 # Database
 pymongo>=4.6.0
