feat: Add backend Executor agent using PandasAI with Gemini LLM and initial frontend chat interface, alongside gitignore updates for generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ Thumbs.db
 backend/test_*.py
 backend/analyze_results.py
 backend/test_results.json
+
+# Generated chart files
+temp_charts/
+exports/
+backend/temp_charts/
+backend/exports/
